--- a/level-1/step-3/step-3.css
+++ b/level-1/step-3/step-3.css
@@ -1,17 +1,31 @@
 /* Step-3 You can assign padding to all sides of a container by using the padding shorthand property. */
 
-.content-mid {
- 
+.content-mid {  
+  padding: 80px;
+
 }
 
 .content-mid-header {
   background: #444;
+
+  width: 50vw;
+  height: 75px;
 }
 
 .content-container {
+
+  width: 50vw;
+  height: 50vh;
 
 }
 
 .content {
   background: #D8D8D8;
+
+  padding: 20px;
+
+  width: 100%;
+  height: 100%;
+
+  text-align: center;
 }
